# TryOnsOBSPlugin

./: libobs.tar
plugins/: CMakeLists.txt
plugins/aja/: CMakeLists.txt
plugins/tryons/: CMakeLists.txt  tryons_audio.c  tryons_audio.h  tryons_common.c  tryons_common.h  tryons_module.c  tryons_network.c  tryons_network.h  tryons_text.c  tryons_text.h
plugins/tryons/audio/: CMakeLists copy.txt  CMakeLists.txt  obs-ffmpeg.c  tryons_audio_source.c
plugins/tryons/audio/cmake/windows/: obs-module.rc.in
plugins/tryons/audio/data/locale/: en-US.ini
plugins/tryons/network/: CMakeLists.txt  tryons_network.c  tryons_network.h
plugins/tryons/text/: CMakeLists.txt
plugins/tryons/text/cmake/windows/: obs-module.rc.in
plugins/tryons/text/data/locale/: en-US.ini
plugins/tryons/text/gdiplus/: tryons.cpp  tryons.cpp.txt
